@@ -10,6 +10,7 @@ Date: ???
     - Rebalanced Cement recipes
     - Added Brass and Invar smelting as prerequisites for Military science (with SCT)
     - Hid overwritten settings from Bob's Logistics
+    - Standardized concrete walk speed bonuses
   Bugfixes:
     - Fixed startup error with Mad Clown's mods enabled
     - Hid gunmetal item, recipes, and tech
